Fix logo spacing

--- a/css/style.css
+++ b/css/style.css
@@ -99,13 +99,15 @@ p {
 .site-header .site-title .logo {
   display: table-cell;
   vertical-align: middle;
-  font-size: 100px;
+  font-size: 90px;
   font-family: 'caviar_dreamsregular';
 }
 .site-header .site-title .logo span {
+  display: inline-block;
   font-size: 200px;
   font-weight: 100;
   font-family: 'lakesight_personal_use_onlyRg';
+  margin-left: 8px;
 }
 .site-header img {
   width: 100%;
@@ -115,7 +117,7 @@ p {
 }
 .site-header .site-nav li {
   display: inline-block;
-  width: 14.28571429%;
+  width: 14.285714285714285%;
 }
 footer {
   display: table;
