--- a/less/header.less
+++ b/less/header.less
@@ -12,13 +12,15 @@
 		.logo {
 			display: table-cell;
 			vertical-align: middle;
-			font-size: 100px;
+			font-size: 90px;
 			font-family: @caviar-regular;
 
 			span {
+				display: inline-block;
 				font-size: 200px;
 				font-weight: 100;
 				font-family: @lakesight;
+				margin-left: 8px;
 			}
 		}
 	}
